clean up makefile

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -1,24 +1,25 @@
-BOARD = esp8266:esp8266:generic
+BOARD = esp8266:esp8266:nodemcuv2
 BAUD = 115200
-FQBN = $(BOARD):xtal=80,vt=flash,exception=legacy,ssl=all,ResetMethod=nodemcu,CrystalFreq=26,FlashFreq=40,FlashMode=dout,eesz=1M64,led=2,sdk=nonosdk_190703,ip=lm2f,dbg=Disabled,lvl=None____,wipe=none,baud=$(BAUD)
-PORT = /dev/cu.usbserial-1410
-TTY = /dev/tty.usbserial-1410
+FQBN = $(BOARD):led=2,baud=$(BAUD)
+PORT = /dev/cu.SLAB_USBtoUART
+TTY = /dev/cu.SLAB_USBtoUART
 CC = arduino-cli
 
 compile: 
-	$(CC) compile --fqbn $(FQBN)
+	$(CC) compile --verbose --fqbn $(FQBN)
 
 flash: 
 	$(CC) upload -p $(PORT) --fqbn $(FQBN) `pwd`
 
 serial:
+	@echo "Type ~. to exit"
 	cu -l $(TTY) -s $(BAUD)
 
 setup:
 	$(CC) config init --additional-urls http://arduino.esp8266.com/stable/package_esp8266com_index.json
 	$(CC) core update-index
 	$(CC) core install esp8266:esp8266
-	$(CC) lib install WiFiManager
+	$(CC) lib install WiFiManager "Adafruit NeoPixel"
 
 clean:
 	rm *.elf *.bin
