fix bug where code actually did nothing...

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -16,10 +16,10 @@ serial:
 	cu -l $(TTY) -s $(BAUD)
 
 setup:
-	$(CC) config init --additional-urls http://arduino.esp8266.com/stable/package_esp8266com_index.json
+	$(CC) config init --additional-urls https://arduino.esp8266.com/stable/package_esp8266com_index.json,https://dl.espressif.com/dl/package_esp32_index.json
 	$(CC) core update-index
 	$(CC) core install esp8266:esp8266
 	$(CC) lib install WiFiManager "Adafruit NeoPixel"
 
 clean:
-	rm *.elf *.bin
+	rm -rf build
